--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
             </section>
         </div>
         
-        <script src="index.pack.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
